--- a/src/index.css
+++ b/src/index.css
@@ -64,4 +64,35 @@
     @apply bg-background text-foreground;
   }
 }
-
+.scroll-y-custom::-webkit-scrollbar{
+  width: 4px;
+  background-color: whitesmoke;
+  border-radius: 50%;
+}
+.scroll-y-custom::-webkit-scrollbar-thumb{
+  width: 10px;
+  background-color: rgba(70, 49, 255, 0.616);
+  border-radius: 10px;
+}
+.link-not-active{
+  position: relative;
+}
+.link-not-active:hover:after{
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 2px;
+  background: #116daf;
+  bottom: -8px;
+  left: 0;
+  animation: linkNotActiveAnimation 0.2s linear;
+  border-radius: 10px;
+}
+@keyframes linkNotActiveAnimation{
+  0%{
+    width: 0%;
+  }
+  100%{
+    width: 100%;
+  }
+}
